--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,11 @@ body {
     box-shadow: 0 0 10px rgba(21, 19, 19, 0.25);
     width: 35%;
     overflow: auto;
+    margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .card-img {
@@ -17,8 +22,9 @@ body {
     float: left;
     width: 25%;
     height: 25%;
-    padding-top: 25px;
-    padding-bottom: 25px;
+    top: 50%;
+    bottom: 50%;
+    transform: translate(0%, 35%);
 }
 
 .text-container {
@@ -27,12 +33,14 @@ body {
     padding-bottom: 25px;
     text-align: center;
     color: #ffffff;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
 }
 
 .link-container {
     font-size: 27px;
     transition: 0.4s ease-in-out, color 0s;
     margin: 4px 2px;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
 }
 
 .redir {
